# swift-analysis

./: .gitignore  CLAUDE.md  Makefile  README.md  albums_metadata.json  pyproject.toml  studio-albums.md  taylors-versions.md  unreleased.md
.github/workflows/: deploy-github-pages.yml
scripts/: analyse_lyrics_cuss_words.py  fetch_lyrics_for_tracks.py  process_albums_to_lyrics_structure.py
site/: cuss_word_analysis.json  index.html  styles.css
src/swift_search/: __init__.py
